2004-10-12  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/custom/custom_container.cc: Use only C++ methods 
	instead of the C functions, now that they are public.
	* docs/tutorial/figures/: Added custom_container.png.

2004-10-10  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/gtkmm-tut.xml: Added Custom Widgets chapter, so far 
 	with a Custom Container section and example.

2004-10-10  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/widget.hg: Made set_parent(), and unparent() public instead 
	of protected, because they are need by custom Containers. Added 
	size_request() which is const and actually returns a value, also 
	needed by custom Containers.
	* gtk/src/accelgroup,hg: Wrap the new gtk_accelerator_get_label() 
	function.
	* gtk/src/comboboxentry.[hg|ccg]: Hand-code get_entry() to fix the 
	build.
	* gtk/src/: Added menutoolbutton.[hg|ccg].
	* gtk/gtkmm/comboboxtext.[h|cc], comboboxentrytext.[h||cc]: Added 
	set_active_text(), clear(). Reimplemented append() and prepend() 
	without using the C functions, because they might not work with our 
	model.

2004-10-09  Murray Cumming  <murrayc@murrayc.com>

	* docs/index.html: Changed cvs links to viewcvs, because lxr and 
	bonsai are still broken.

2004-10-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/style.hg: Add create() method, as per bug #148012.

2004-10-09  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/comboboxentry.hg: Added get_entry(), as per bug #142758.

2004-09-04 Jonathan Brandmeyer <jbrandmeyer@earthlink.net>
 
 	* gdk/src/screen.hg: get_default(): Take an extra reference so that
 	the Screen is not deleted too early.

2004-09-17  Murray Cumming  <murrayc@murrayc.com>

	* iconview.hg: Added overrides of set_text_column(), and 
	set_pixbuf_column() that take ModelColumns instead of ints.
	Wrapped signals. Added foreach()
	* cellview.hg: Make get_size_of_row() const.
	* tools/extra_defs_gen/gtk_extra_defs_gen: Added new types.