@@ -6039,20 +6039,17 @@ practical - and sensible - to subclass a button for that purpose.
 	  <listitem>
 	    <para>GTK+ 2.x</para>
 	    <para>
-	      Before installing gtkmm, you need to install GTK+ 2.x.  You
+	      Before installing gtkmm, you need to install the latest GTK+ 2.x.  You
 	      can find the latest windows installer at <ulink
-		url="http://www.dropline.net/gtk/"></ulink>. The Windows
+		url="http://gladewin32.sourceforge.net/">Glade/Gtk+ for Win32</ulink>. The Windows
 	      installer will correctly install any dependencies that GTK+
 	      2.x may need.
 	    </para>
 	    <para>
-	      Start with the Runtime GTK+ installer, and allow the
-	      installation to proceed to the default directory.  When the
-	      installation is complete, continue with the Development GTK+
-	      Installer.  When installing Development GTK+, you should change
-	      the installation directory from the default (currently
-	      c:\dev-cpp) to wherever you have your Dev-C++ installation
-	      (ie. d:\dev-cpp). TODO: Why?
+		  You will need to download and install the Gtk+/Win32 Development
+		  Environment.  This includes the runtime, devel, docs, and glade.
+	      Start with the Development GTK+ installer, and allow the
+	      installation to proceed to the default directory.  
 	    </para>
 	  </listitem>
 	</itemizedlist>
@@ -6093,7 +6090,7 @@ practical - and sensible - to subclass a button for that purpose.
 	</para>
 	<para>
 	  <command>
-	    pkg-config --libs --cflags gtkmm-2.4
+	    pkg-config --cflags gtkmm-2.4
 	  </command>
 	</para>
 	<para>
@@ -6114,7 +6111,24 @@ practical - and sensible - to subclass a button for that purpose.
 	    -Id:/dev-c++/lib/glib-2.0/include
 	    -Id:/dev-c++/lib/gtk-2.0/include
 	    -Id:/dev-c++/include/pango-1.0 -Id:/dev-c++/include/atk-1.0
-	    -Ld:/dev-c++/lib -lgtkmm-2.4 -lgdkmm-2.4 -latkmm-1.0
+	    -Ld:/dev-c++/lib 
+	  </programlisting>
+	</para>
+	<para>
+	  The next step is to obtain the list of libraries by issuing the following
+	  command:
+	</para>
+	<para>
+	  <command>
+	    pkg-config --libs gtkmm-2.4
+	  </command>
+	</para>
+	<para>
+	  Your results may look something similar to this:
+	</para>
+	<para>
+	  <programlisting>
+	    -lgtkmm-2.4 -lgdkmm-2.4 -latkmm-1.0
 	    -lgtk-win32-2.0 -lpangomm-1.4 -lglibmm-2.4 -lsigc-2.0
 	    -lgdk-win32-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lpangowin32-1.0
 	    -lgdi32 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -lglib-2.0
@@ -6126,8 +6140,7 @@ practical - and sensible - to subclass a button for that purpose.
 	  <figure id="figure-project-options">
 	    <title>Dev-C++ Project Options</title>
 	    <screenshot>
-	      <graphic format="PNG"
-		fileref="&url_figures_base;devcpp_project_options.png"/>
+	      <graphic format="PNG" fileref="&url_figures_base;devcpp_project_options.png"/>
 	    </screenshot>
 	  </figure>
 	</para>
@@ -6135,15 +6148,14 @@ practical - and sensible - to subclass a button for that purpose.
 	<para>
 	  Now create a new Project.  We will make this project work with
 	  gtkmm.  After creating a new project, select <literal>Project Options</literal>
-	  from the menu, and under the <literal>Parameters</literal> tab, paste the
-	  information from pkg-config. In the <literal>Additional commandline options</literal> for
-	  the C++ compiler, paste the include and lib <emphasis>directories</emphasis>.  (The commandline options preceeded by either an -I or
-	  a -L).
+	  from the menu, and under the <literal>Parameters</literal> tab, we will need to enter the information
+	  we obtained earlier:  In the <literal>Additional commandline options</literal> for
+	  the C++ compiler, paste the include and lib <emphasis>directories</emphasis> you obtained with
+	  the --cflags argument. (The commandline options preceeded by either an -I or a -L).
 	</para>
 
 	<para>
-	  Then tell the linker what libraries to include, by pasting the libraries into the <literal>Additional commandline options</literal>
-	  for the Linker. (These commandline options are preceeded by a -l).
+	  Now we must tell the linker what libraries to include, by pasting the libraries into the <literal>Additional commandline options</literal> for the Linker. (These commandline options are preceeded by a -l).
 	</para>
 
 	<para>
