@@ -1,3 +1,9 @@
+2004-10-17  Gene Ruebsamen  <gene@erachampion.com>
+
+ 	* docs/tutorial/gtkmm-tut.xml: Updated the Windows installation
+ 	appendix by providing a link to the latest Gtk+ Win32 installer, 
+ 	and updating the installation instructions.
+
 2004-10-12  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/custom/custom_container.cc: Use only C++ methods 
